# chatgpt-playground

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  start.sh
app/: config.py  main.py
app/api/: endpoints.py
app/resources/chatgpt/: client.py
